--- a/index.htm
+++ b/index.htm
@@ -2493,10 +2493,12 @@ var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-27913819-1']);_gaq.push(['_t
    1184;mso-padding-alt:0cm 5.4pt 0cm 5.4pt'>
     <tr style='mso-yfti-irow:1'>
       <td style='padding:.75pt .75pt .75pt .75pt; line-height: 30px;'><ul>
-        <li>Sept. 2018 ~ Present, <strong>Associate Dean</strong>, School of Electrical Engineering, Guangxi University </li>
-        <li>Dec. 2016 ~ Present, <strong>Professor</strong>, School of Electrical Engineering, Guangxi University </li>
-        <li>Dec. 2008 ~ Nov. 2016, <strong>Associate professor</strong>, School of Electrical Engineering, Guangxi University </li>
-        <li>July 2005 ~ Nov. 2008, <strong>Lecture</strong>, School of Electrical Engineering, Guangxi University </li>
+        <li>Dec. 2019 ~ Dec. 2020, <strong>Visiting Scholar</strong>, Waseda University, Japan</li>
+        <li>Aug. 2018 ~ Dec. 2019, <strong>Associate Dean</strong>, School of Electrical Engineering, Guangxi University, China</li>
+        <li>Dec. 2016 ~ Aug. 2018, <strong>Head of Automation Division</strong>, School of Electrical Engineering, Guangxi University, China </li>
+        <li>Dec. 2016, <strong>Professor</strong>, School of Electrical Engineering, Guangxi University, China </li>
+        <li>Dec. 2008, <strong>Associate professor</strong>, School of Electrical Engineering, Guangxi University, China </li>
+        <li>July 2005, <strong>Engineer</strong>, School of Electrical Engineering, Guangxi University, China </li>
       </ul></td>
     </tr>
   </table>
@@ -2583,8 +2585,8 @@ var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-27913819-1']);_gaq.push(['_t
    <tr style='mso-yfti-irow:1'>
      <td style='padding:.75pt .75pt .75pt .75pt'>       <ol>
          <li> Hongman Wang, Hui Qiao, <strong>Jingyu Lin</strong>, Rihui Wu, Yebin Liu, and Qionghai Dai. Model study of transient imaging with multi-frequency time-of-flight sensors. IEEE Transactions on Pattern Analysis and Machine Intelligence, 2020. DOI: 10.1109/TPAMI.2020.2981574</li>
+         <li>Xueyun Chen, <strong>Jingyu Lin</strong>,  Shiming Xiang, Chun-Hong Pan. Detecting maneuvering target accurately based on a two-phase approach from remote sensing imagery. IEEE Geoscience and Remote  Sensing Letters, 17(5): 849-853, May 2020.</li>
          <li>Quan Lu, Yun Zhang, <strong>Jingyu Lin</strong>, and Min Wu. Dynamic electromagnetic positioning system for accurate close-range navigation of multi-rotor UAV. IEEE Sensors Journal, 20(8): 4459-4468, April 2020.</li>
-         <li>Xueyun Chen, <strong>Jingyu Lin</strong>,  Shiming Xiang, Chun-Hong Pan. Detecting maneuvering target accurately based on a two-phase approach from remote sensing imagery. IEEE Geoscience and Remote  Sensing Letters, 2019. DOI: 10.1109/LGRS.2019.2935230</li>
          <li>Pingping Gong, Ziguang Lu, <strong>Jingyu  Lin</strong>, Zhilin Lv, Likun Hu. Distributed secondary control based on cluster consensus of inhibitory coupling with power limit for isolated multi-microgrid.  IET Generation Transmission &amp; Distribution, 13(18): 4114-4122, Sept. 2019.</li>
          <li>Ziguang  Lu, Ruilin Zhang, Likun Hu, Lin Gan, <strong>Jingyu  Lin</strong>, Pingping Gong. Model predictive control of induction motor based on amplitude–phase motion equation. IET Power Electronics, 12(9): 2400-2406, 2019.  </li>
          <li><strong>Jingyu  Lin</strong>, Rihui Wu, Hongman Wang, Yebin Liu.  Transient imaging with a time-of-flight camera and its applications. Frontiers  of Information Technology &amp; Electronic Engineering, 18(9):1268-1276, 2017. </li>
