--- a/index.htm
+++ b/index.htm
@@ -2526,7 +2526,7 @@ var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-27913819-1']);_gaq.push(['_t
       <tr style='mso-yfti-irow:1'>
         <td style='padding:.75pt .75pt .75pt .75pt'>          <ul>
             <li>Computer Vision &amp; Machine Learning </li>
-            <li>Mobile Robotics &amp; UAV</li>
+            <li>	Unmanned Vehicles (e. g. Mobile Robot &amp; UAV)</li>
           </ul></td>
       </tr>
     </table>
@@ -2622,7 +2622,7 @@ var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-27913819-1']);_gaq.push(['_t
    1184;mso-padding-alt:0cm 5.4pt 0cm 5.4pt'>
       <tr style='mso-yfti-irow:1'>
         <td style='padding:.75pt .75pt .75pt .75pt'><ol>
-          <li>Subproject of Guangxi Major Science and Technology Projecct for Innovation Driven Development: Development and application of 'internet+' intelligent banana-planting management system, 2018.06-2021.06.</li>
+          <li>Subproject of Guangxi Major Science and Technology Project for Innovation Driven Development: Development and application of 'internet+' intelligent banana-planting management system, 2018.06-2021.06.</li>
           <li>NSFC 61661006: Fine detection of maneuvering targets from high-resolution remote sensing images via deep neural networks. 2017.01-2020.12.</li>
           <li>NSFC 61561005: Image acquisition and 3D reconstruction in wide-range out-door objects by autonomous UAVs. 2016.01-2019.12, PI.</li>
           <li>Guangxi NSF 015GXNSFAA139284: Analysis and acquisition of high temporal resolution transient images based on modulation imaging. 2015.09-2018.08, PI.</li>
