--- a/index_cn.htm
+++ b/index_cn.htm
@@ -2387,12 +2387,14 @@ var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-27913819-1']);_gaq.push(['_t
             <o:p></o:p>
           </span></strong></p>
           <p align=center class=style15911 style='margin:0cm; margin-bottom:.0001pt; text-align:center'><span lang=EN-US>博士, 教授</span></p>
+<p class=MsoNormal3 align=center style='text-align:center'>&nbsp;</p>
 <p class=MsoNormal3 align=center style='text-align:center'><span
-      class=style126><span lang=EN-US style='font-size:16pt'>广西大学电气工程学院</span></span></p>
-<p align=center class=style1261 style='text-align:center'>地址: 广西省南宁市大学路100号广西大学电气楼812房</p>
+      class=style126><span lang=EN-US style='font-size:16pt'>广东工业大学自动化学院</span></span></p>
+<p align=center class=style1261 style='text-align:center'>地址: 广州市番禺区大学城外环西路100号</p>
+<p align=center class=style1261 style='text-align:center'><span style="font-size:16pt">广东工业大学</span>工学二号馆512房</p>
 <p align=center class=style1261 style='text-align:center'><span class="style126" style="text-align:center">Email: <span
     class=style21111><span lang=EN-US><a
-    href="mailto:jylin@gxu.edu.cn">jylin(at)gxu.edu.cn</a></span></span></span></p>
+    href="mailto:jylin@gdut.edu.cn">jylin(at)gdut.edu.cn</a></span></span></span></p>
 <a href="index.htm">[English Version]</a></td>
         <td width=80 style='width:41.85pt;padding:0cm 0cm 0cm 0cm;height:108.0pt'></td>
         </tr>
@@ -2485,6 +2487,7 @@ var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-27913819-1']);_gaq.push(['_t
    1184;mso-padding-alt:0cm 5.4pt 0cm 5.4pt'>
     <tr style='mso-yfti-irow:1'>
       <td style='padding:.75pt .75pt .75pt .75pt; line-height: 30px;'><ul>
+        <li>2021.1, <strong>教授</strong>, 广东工业大学自动化学院</li>
         <li>2019.12 ~ 2020.12,<strong> 访问学者</strong>, 早稻田大学</li>
         <li>2018.8 ~ 2019.12, <strong>副院长</strong>, 广西大学电气工程学院 </li>
         <li> 2014.12 ~ 2018.8, <strong>自动化教研室副主任</strong>, 广西大学电气工程学院</li>
@@ -2576,14 +2579,15 @@ var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-27913819-1']);_gaq.push(['_t
    1184;mso-padding-alt:0cm 5.4pt 0cm 5.4pt'>
    <tr style='mso-yfti-irow:1'>
      <td style='padding:.75pt .75pt .75pt .75pt'>       <ol>
-         <li>Hongman Wang, Hui Qiao, <strong>Jingyu Lin</strong>, Rihui Wu, Yebin Liu, and Qionghai Dai. Model study of transient imaging with multi-frequency time-of-flight sensors. IEEE Transactions on Pattern Analysis and Machine Intelligence, 2020. DOI: 10.1109/TPAMI.2020.2981574</li>
-         <li>Xueyun Chen, <strong>Jingyu Lin</strong>,  Shiming Xiang, Chun-Hong Pan. Detecting maneuvering target accurately based on a two-phase approach from remote sensing imagery. IEEE Geoscience and Remote  Sensing Letters, 17(5): 849-853, May 2020.</li>
-         <li>Quan Lu, Yun Zhang, <strong>Jingyu Lin</strong>, and Min Wu. Dynamic electromagnetic positioning system for accurate close-range navigation of multi-rotor UAV. IEEE Sensors Journal, 20(8): 4459-4468, April 2020.</li>
-         <li>Pingping Gong, Ziguang Lu, <strong>Jingyu  Lin</strong>, Zhilin Lv, Likun Hu. Distributed secondary control based on cluster consensus of inhibitory coupling with power limit for isolated multi-microgrid.  IET Generation Transmission &amp; Distribution, 13(18): 4114-4122, Sept. 2019.</li>
+         <li><strong>Jingyu Lin</strong>, Shuqing Li, Wen Dong, Takafumi  Matsumaru, Shengli Xie. Long-arm three-dimensional LiDAR for anti-occlusion  and anti-sparsity point clouds. IEEE Transactions on Instrumentation and  Measurement, 2021. DOI: <a href="https://doi.org/10.1109/TIM.2021.3104019">10.1109/TIM.2021.3104019</a> (<a href="https://github.com/SCVision/LongarmLiDAR">code &amp; data</a>)</li>
+         <li>Hongman Wang, Hui Qiao, <strong>Jingyu Lin</strong>, Rihui Wu, Yebin Liu, and Qionghai Dai. Model study of transient imaging with multi-frequency time-of-flight sensors. IEEE Transactions on Pattern Analysis and Machine Intelligence, 2020. DOI: <a href="https://doi.org/10.1109/TPAMI.2020.2981574">10.1109/TPAMI.2020.2981574</a></li>
+         <li>Xueyun Chen, <strong>Jingyu Lin</strong>,  Shiming Xiang, Chun-Hong Pan. Detecting maneuvering target accurately based on a two-phase approach from remote sensing imagery. IEEE Geoscience and Remote  Sensing Letters, 17(5): 849-853,  2020.</li>
+         <li>Quan Lu, Yun Zhang, <strong>Jingyu Lin</strong>, and Min Wu. Dynamic electromagnetic positioning system for accurate close-range navigation of multi-rotor UAV. IEEE Sensors Journal, 20(8): 4459-4468,  2020.</li>
+         <li>Pingping Gong, Ziguang Lu, <strong>Jingyu  Lin</strong>, Zhilin Lv, Likun Hu. Distributed secondary control based on cluster consensus of inhibitory coupling with power limit for isolated multi-microgrid.  IET Generation Transmission &amp; Distribution, 13(18): 4114-4122,  2019.</li>
          <li>Ziguang  Lu, Ruilin Zhang, Likun Hu, Lin Gan, <strong>Jingyu  Lin</strong>, Pingping Gong. Model predictive control of induction motor based on amplitude–phase motion equation. IET Power Electronics, 12(9): 2400-2406, 2019. </li>
          <li><strong>Jingyu  Lin</strong>, Rihui Wu, Hongman Wang, Yebin Liu.  Transient imaging with a time-of-flight camera and its applications. Frontiers  of Information Technology &amp; Electronic Engineering, 18(9):1268-1276, 2017. </li>
          <li><strong>Jingyu  Lin</strong>, Yebin Liu, Jinli Suo, Qionghai Dai. Frequency-domain  transient imaging. IEEE Transactions on Pattern Analysis and Machine  Intelligence, 39(5): 937-950, 2017. (<a href="transient_imaging/transient_code_pub4.zip">Code</a>, Calibrated Correlation function: [<a href="transient_imaging/transient_calib1.zip">calib1</a>] [<a href="transient_imaging/transient_calib5.zip">calib5</a>], Data: [<a href="transient_imaging/transient_data_toys.zip">toys</a>] [<a href="transient_imaging/transient_data_bottle16.zip">bottle16</a>] [<a href="transient_imaging/transient_data_mirror1.zip">mirror1</a>])</li>
-         <li>Hui  Qiao, Jingyu Lin, Yebin Liu, Matthias Hullin, and  Qionghai Dai. Resolving transient time profile in ToF imaging via log-sum  sparse regularization. Optics Letters, 40(6): 918-921, 2015. </li>
+         <li>Hui  Qiao, <strong>Jingyu Lin</strong>, Yebin Liu, Matthias Hullin, and  Qionghai Dai. Resolving transient time profile in ToF imaging via log-sum  sparse regularization. Optics Letters, 40(6): 918-921, 2015. </li>
          <li><strong>Jingyu  Lin</strong>, Xing Lin, Xiangyang Ji and Qionghai Dai.  Separable coded aperture for depth from a single image. IEEE Signal Processing  Letters, 21(12): 1471 - 1475, 2014. </li>
          <li><strong>Jingyu  Lin</strong>, Yebin Liu, M. Hullin, Qionghai Dai.  Fourier analysis on transient imaging with a multifrequency time-of-flight camera.  IEEE Conference on Computer Vision and Pattern Recognition (CVPR), pp.  3230-3237, 2014.6.23 - 2014.6.28. Oral. </li>
          <li><strong>Jingyu  Lin</strong>, Xiangyang Ji, Wenli Xu, Qionghai Dai.  Absolute depth estimation from a single defocused image. IEEE Transactions on  Image Processing, 22(11): 4545 - 4550, 2013. (<a href="single_image_depth/singleimage_pub.rar">Code</a>)</li>
@@ -2668,7 +2672,7 @@ var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-27913819-1']);_gaq.push(['_t
    style='width:90.0%;mso-cellspacing:1.5pt;background:white;mso-yfti-tbllook:
    1184;mso-padding-alt:0cm 5.4pt 0cm 5.4pt'>
    <tr style='mso-yfti-irow:1;mso-yfti-lastrow:yes'>
-     <td style='padding:.75pt .75pt .75pt .75pt'><p class="MsoNormal"><a href="https://github.com/GXUVision">Shared Codes</a></p></td>
+     <td style='padding:.75pt .75pt .75pt .75pt'><p class="MsoNormal"><a href="https://github.com/SCVision">Shared Codes</a></p></td>
    </tr>
    <tr style='mso-yfti-irow:1;mso-yfti-lastrow:yes'>
      <td style='padding:.75pt .75pt .75pt .75pt'><p class="MsoNormal">&nbsp;</p></td>
