--- a/index.htm
+++ b/index.htm
@@ -2493,7 +2493,7 @@ var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-27913819-1']);_gaq.push(['_t
    1184;mso-padding-alt:0cm 5.4pt 0cm 5.4pt'>
     <tr style='mso-yfti-irow:1'>
       <td style='padding:.75pt .75pt .75pt .75pt; line-height: 30px;'><ul>
-        <li>Jan.. 2021, <strong>Professor</strong>, School of Automation, Guangdong University of  Technology, China </li>
+        <li>Jan. 2021, <strong>Professor</strong>, School of Automation, Guangdong University of  Technology, China </li>
         <li>Dec. 2019 ~ Dec. 2020, <strong>Visiting Scholar</strong>, Waseda University, Japan</li>
         <li>Aug. 2018 ~ Dec. 2019, <strong>Associate Dean</strong>, School of Electrical Engineering, Guangxi University, China</li>
         <li>Dec. 2014 ~ Aug. 2018, <strong>Head of Automation Division</strong>, School of Electrical Engineering, Guangxi University, China </li>
